--- a/pw-labs-rodrigosantos-a21904445/lab4/estilos.css
+++ b/pw-labs-rodrigosantos-a21904445/lab4/estilos.css
@@ -122,6 +122,5 @@ img.stickyImage{
     width: 150px;
     height: auto;
     text-align: center;
-    position: sticky;
-    position: -webkit-sticky;
+    position: absolute;
 }
